# multi-layer-perceptron-from-scratch-in-rust

./: .gitignore  Cargo.toml  README.md  build.rs  optuna_optimize.py  perf.txt  training_log.csv
experiments/: analises.md  run_comparison.sh
experiments/output/: run1.csv  run2.csv
src/: activations.rs  data.rs  linalg.rs  losses.rs  main.rs  network.rs  optimizers.rs  utils.rs
src/common/: activations.rs  augment.rs  data.rs  losses.rs  mod.rs
src/cpu/: gradient_check.rs  linalg.rs  main.rs  network.rs  optimizers.rs  utils.rs
src/gpu/: error.rs  kernels.rs  linalg.rs  main.rs  network.rs  optimizers.rs  utils.rs
