[package]
name = "multi-layer-perceptron-from-scratch-in-rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "mlp"
path = "src/lib.rs"

[[bin]]
name = "mlp-cpu"
path = "src/cpu/main.rs"

[[bin]]
name = "mlp-gpu"
path = "src/gpu/main.rs"

[[bin]]
name = "plot"
path = "src/bin/plot.rs"
required-features = ["auto-plot"]

[dependencies]
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
cblas-sys = "0.3.0"
fastrand = "2"
cudarc = { version = "0.11", features = ["cublas", "cuda-12020"], optional = true }
plotters = { version = "0.3", optional = true }
csv = { version = "1.3", optional = true }
clap = { version = "4.5", features = ["derive"] }

# BLAS backends (escolha um via feature flag)
intel-mkl-src = { version = "0.8", features = ["mkl-static-lp64-iomp"], optional = true }
openblas-src = { version = "0.10", features = ["cblas", "system"], optional = true }
accelerate-src = { version = "0.3", optional = true }

[features]
default = ["mkl", "gpu"]
mkl = ["intel-mkl-src"]
openblas = ["openblas-src"]
accelerate = ["accelerate-src"]
gpu = ["cudarc"]
auto-plot = ["plotters", "csv"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
